# gp-zurihac-2020

./: GP.hs  README.md  Section_1_4.hs  Section_1_6.hs  Section_2_1.hs  Section_2_13.hs  Section_2_4.hs  Section_2_5.hs  Section_2_8.hs  gp-zurihac.cabal  hie.yaml
