cabal-version: 3.0
name: gp-zurihac
version: 0.1
author: Andres Löh <andres@well-typed.com>

library
  default-language:
    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    MultiParamTypeClasses
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    UndecidableSuperClasses
  build-depends:
    base
  ghc-options:
    -Wall -fno-show-valid-hole-fits
    -Wno-unticked-promoted-constructors -Wno-unused-matches
    -Wno-unused-imports
  exposed-modules:
    GP
    Section_1_4
    Section_1_6
    Section_2_1
    Section_2_4
    Section_2_5
    Section_2_8
    Section_2_13
